[package]
name = "interpolation-in-regression"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
debug = true
lto = true

[profile.test]
opt-level = 3

[dependencies]
rand = "0.8.5"
plotters = "0.3.5"
apng = "0.3.1"
png = "0.17.9"
image = { version = "0.24.6", default-features = false, features = ["png"] }